# tropical-fox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
app/animation/src/: lib.rs  plugin.rs  systems.rs
app/combat/src/: attack.rs  damage.rs  lib.rs
app/common/src/: lib.rs
app/common/src/components/: animation.rs  enemy.rs  mod.rs
app/common/src/events/: mod.rs
app/common/src/resources/: mod.rs
app/enemy/: Cargo.toml
app/hot-asset/: README.md
app/hot-asset/src/core/: metrics.rs
app/level/: Cargo.toml
app/level/src/: components.rs  config.rs  events.rs  ldtk_entities.rs  lib.rs  plugin.rs  resources.rs
app/level/src/systems/: background.rs  checkpoint.rs  collision.rs  goal.rs  mod.rs
app/player/: README.md
app/player/src/: config.rs  plugin.rs  systems.rs
app/tropical-fox/: Cargo.toml  README.md
app/tropical-fox/src/: config.rs  core_plugin.rs  main.rs
app/tropical-fox/src/debug/: mod.rs
assets/config/: bosses.ron  characters.ron  enemies.ron  game_settings.ron  levels.ron  levels_metadata.ron  players.ron
assets/graphics/characters/bosses/sunny_dragon/: sunny_dragon_animations.ron
assets/graphics/characters/enemies/ant/: ant_animations.ron
assets/graphics/characters/enemies/bat/: bat_animations.ron
assets/graphics/characters/enemies/bat/spritesheets/: README.md
assets/graphics/characters/enemies/bear/: bear_animations.ron
assets/graphics/characters/enemies/piranha/: piranha_animations.ron
assets/graphics/characters/players/fox/: fox_animations.ron
assets/graphics/characters/players/fox/spritesheets/: README.md  fox_animations.ron
assets/graphics/environments/test_stage/levels/: test_stage.ldtk
assets/levels/: test.ldtk
crates/animation/: Cargo.toml  README.md
crates/animation/src/: config.rs
crates/combat/: Cargo.toml  README.md
crates/combat/src/: health.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: game_state.rs  lib.rs
crates/common/src/components/: mod.rs
crates/enemy/: README.md
crates/enemy/src/: config.rs  lib.rs  plugin.rs
crates/enemy/src/config/: enemies.rs
crates/hot-asset/: Cargo.toml
crates/hot-asset/src/bevy_adapter/: loader.rs  plugin.rs  resources.rs
crates/hot-asset/src/core/: debounce.rs  path_resolver.rs
crates/level/: Cargo.toml
crates/level/src/: bundles.rs  components.rs  config.rs  lib.rs  plugin.rs
crates/level/src/systems/: checkpoint.rs  goal.rs  mod.rs  parallax.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs  plugin.rs
crates/tropical-fox/: Cargo.toml  README.md
crates/tropical-fox/src/: hot_reload_systems.rs  main.rs  physics_systems.rs
docs/: TODO.md  architecture.md  design.md  implementation_log.md  ldtk.md  roadmap.md  ron_format_guide.md
src/: error.rs  main.rs
src/combat/: attack.rs  damage.rs  effects.rs  mod.rs
src/components/: animation.rs  enemy.rs  level.rs  mod.rs
src/config/: animation.rs  bosses.rs  characters.rs  enemies.rs  mod.rs  players.rs
src/events/: mod.rs
src/hot_asset/: mod.rs
src/hot_asset/bevy_adapter/: events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/hot_asset/core/: debounce.rs  mod.rs  path_resolver.rs  watcher.rs
src/plugins/: animation.rs  core.rs  enemy.rs  level.rs  mod.rs  player.rs
src/resources/: mod.rs
src/systems/: animation.rs  hot_reload.rs  level.rs  mod.rs  physics.rs  player.rs
