[package]
name = "tropical-fox"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Development feature: enables dynamic linking for faster iteration
bevy-dev = ["bevy/dynamic_linking"]

[dependencies]
# Core Bevy engine
bevy = { version = "0.17.3" }

# Physics
bevy_rapier2d = { version = "0.32.0", features = ["simd-stable", "debug-render-2d"] }

# Tilemap and LDtk level loading
bevy_ecs_ldtk = "0.13.0"

# Audio
bevy_kira_audio = "0.24.0"

# Animation
benimator = "4.1.3"

# UI/Debugging
bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"

# Misc
rand = "0.9.2"
thiserror = "2.0.17"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
