[workspace]
members = [
    "crates/tropical-fox",
    "crates/common",
    "crates/hot-asset",
    "crates/animation",
    "crates/combat",
    "crates/player",
    "crates/enemy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core Bevy engine
bevy = { version = "0.17.3" }

# Physics
bevy_rapier2d = { version = "0.32.0", features = ["simd-stable", "debug-render-2d"] }

# Tilemap
bevy_ecs_tilemap = "0.17.0"

# Audio
bevy_kira_audio = "0.24.0"

# Animation
benimator = "4.1.3"

# UI/Debugging
bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"

# Misc
rand = "0.9.2"
thiserror = "2.0.17"

# File watching for config hot-reload
notify = "8.2.0"
crossbeam-channel = "0.5.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
